# UniLab

./: .coverage  .dockerignore  .gitignore  .mailmap  .pre-commit-config.yaml  AGENTS.md  CHANGELOG_G1_SAC_FIX.md  CLAUDE.md  CODE_ARCHITECTURE_ANALYSIS.md  CONTRIBUTING.md  Dockerfile  Dockerfile.base  LICENSE  Makefile  NAN_ISSUE_ANALYSIS.md  NAN_ROOT_CAUSE.md  OFFPOLICY_INFRA_DESIGN.md  README.md  README_zh.md  REFACTORING_TODO.md  REWARD_CONFIG_SYSTEM.md  SAC_TRAINING_ISSUE_ANALYSIS.md  SYMMETRY_AUGMENTATION.md  TD3_STABILITY_FIX.md  TRAINING_FIXES.md  g1_motion_tracking_deploy_mujoco_sim2sim.py  pyproject.rocm.toml  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
benchmark/: benchmark_ane_inference.py  benchmark_ane_peak.py  benchmark_backends.py  benchmark_conversions.py  benchmark_env_step.py  benchmark_fast_sac_backends.py  benchmark_forward_reset_methods.py  benchmark_gpu_buffer.py  benchmark_ipc_buffer_layout.py  benchmark_ipc_index_sort.py  benchmark_ipc_weight_sync.py  benchmark_mj_step.py  benchmark_mjmodel_memory.py  benchmark_mlp_inference.py  benchmark_mlx_compile.py  benchmark_mlx_step.py  benchmark_mps_numpy.py  benchmark_mujoco.py  benchmark_mujoco_backend_step_detail.py  benchmark_mujoco_rollout_model_sharing.py  benchmark_mujoco_vs_motrix.py  benchmark_offpolicy_regression.py  benchmark_physics_step_genesis.py  benchmark_physics_step_isaacgym.py  benchmark_physics_step_mj_step.py  benchmark_physics_step_motrixsim.py  benchmark_physics_step_mujoco_warp.py  benchmark_postprocess.py  benchmark_replay_buffer_placement.py  benchmark_reset_batch_vs_loop.py  benchmark_rollout_backend.py  benchmark_sample_overhead.py  benchmark_sharpa_init_dr_construct.py  benchmark_sim.py  device_info.py  (+2 more)
(+1295 files in other folders)
