[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "unilab"
version = "0.1.0"
description = "Universal Lab for Robot Learning"
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "numpy",
    "torch",
    "torchvision",
    "mujoco-uni==3.5.0.post2",
    "gymnasium",
    "imageio",
    "etils",
    "ml_collections",
    "tensordict",
    "rsl-rl-lib>=3.3.0,<5.0.0",
    "packaging",
    "mediapy",
    "tensorboard",
    "typing-extensions",
    "mlx ; sys_platform == 'darwin'",
]

[project.optional-dependencies]
dev = [
    "pytest",
]
motrix = [
    "motrixsim==0.6.0",
]

[dependency-groups]
dev = [
    "pytest",
]

[tool.uv.sources]
mujoco-uni = { index = "test-pypi" }

[[tool.uv.index]]
name = "test-pypi"
url = "https://test.pypi.org/simple/"
explicit = true

[tool.hatch.build.targets.wheel]
packages = ["unilab"]
